@@ -31,6 +31,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   timeout would have then waited for the time limit to expire.
   [bug introduced in coreutils-8.27]
 
+** New features
+
+  timeout now supports the --verbose option to diagnose forced termination.
+
 ** Improvements
 
   tail --bytes=NUM will efficiently seek to the end of block devices,
